@@ -1,1 +1,4 @@
 #
+from deliverance import monkeys
+monkeys.apply()
+
