@@ -4,6 +4,8 @@ News
 svn trunk
 ---------
 
+* Add a monkeypatch for Paste to work around a long unsolved robustness bug.
+
 * Correctly handle in-document links in the theme. Patch from Michael Dunstan. This
   fixes #19.
 
